import java.util.*;

public class CardTemplate {
    private String id;
    private String cardTypeId;
    private String name;
    private List<String> frontFields;
    private List<String> backFields;
}
