import java.util.*;

public class DictationFolder {
    private String id;
    private String userId;
    private String name;
    private Integer order;
    private User user;
}
