import java.util.*;

public class DictationProgress {
    private String id;
    private String userId;
    private String lessonId;
    private List<Integer> completedSentences;
    private String difficulty;
    private Date createdAt;
    private Date updatedAt;
    private User user;
}
