import java.util.*;

public class FlashcardReview {
    private String id;
    private String flashcardId;
    private Integer rating;
    private Date reviewedAt;
    private Integer scheduledDays;
    private Integer elapsedDays;
    private CardState state;
    private Flashcard flashcard;
}
