import java.util.*;

public class Notification {
    private String id;
    private String userId;
    private User user;
    private NotificationType type;
    private String title;
    private String body;
    private String icon;
    private String thumbnail;
    private String link;
    private Boolean isRead;
    private Date createdAt;
}
