import java.util.*;

public class SharedDeck {
    private String id;
    private String publisherId;
    private String name;
    private String description;
    private List<String> tags;
    private Object lexonPayload;
    private Integer importCount;
    private Date createdAt;
    private Date updatedAt;
    private User publisher;
}
