import java.util.*;

public class UsageRecord {
    private String id;
    private String subscriptionId;
    private String feature;
    private Integer count;
    private Date periodStart;
    private Date periodEnd;
    private Date createdAt;
    private Date updatedAt;
    private Subscription subscription;
}
