import java.util.*;

public class UserAchievement {
    private String id;
    private String userId;
    private String achievementId;
    private Date earnedAt;
    private User user;
    private Achievement achievement;
}
