import java.util.*;

public class XpLog {
    private String id;
    private String userId;
    private Integer amount;
    private String reason;
    private Date createdAt;
    private User user;
}
