@startuml
skinparam linetype ortho
skinparam classAttributeIconSize 0
hide methods

enum UserRole {
  + STUDENT
  + ADMIN
  + INSTRUCTOR
}

enum Difficulty {
  + BEGINNER
  + INTERMEDIATE
  + ADVANCED
}

enum MaterialType {
  + LESSON
  + VOCABULARY
  + GRAMMAR
  + PRACTICE
  + VIDEO
  + AUDIO
}

enum CardState {
  + NEW
  + LEARNING
  + REVIEW
  + RELEARNING
}

enum SubscriptionTier {
  + FREE
  + PREMIUM
  + PRO
}

enum SubscriptionStatus {
  + ACTIVE
  + TRIALING
  + PAST_DUE
  + CANCELED
  + EXPIRED
}

enum PaymentProvider {
  + MOCK
  + STRIPE
  + MANUAL
}

enum NotificationType {
  + STREAK_MILESTONE
  + LESSON_COMPLETED
  + REVIEW_DUE
  + DECK_MASTERED
  + EXAM_GRADED
  + NEW_EXAM_AVAILABLE
  + DICTATION_COMPLETE
  + NEW_LESSON
  + SYSTEM_ANNOUNCEMENT
  + ACHIEVEMENT
}

enum PostType {
  + STUDY_TIP
  + SCORE_ACHIEVEMENT
  + GENERAL
}

class User {
  - id: String
  - email: String
  - password: String?
  - googleId: String?
  - avatar: String?
  - firstName: String?
  - lastName: String?
  - isActive: Boolean
  - createdAt: DateTime
  - updatedAt: DateTime
}

class LearningMaterial {
  - id: String
  - title: String
  - description: String?
  - content: Json
  - tags: String[]
  - isPublished: Boolean
  - createdAt: DateTime
  - updatedAt: DateTime
}

class LearningProgress {
  - id: String
  - userId: String
  - materialId: String
  - progress: Int
  - completed: Boolean
  - lastAccess: DateTime
  - createdAt: DateTime
  - updatedAt: DateTime
}

class Grammar {
  - id: String
  - lessonId: String
  - title: String
  - rule: String
  - example: String
  - createdAt: DateTime
  - updatedAt: DateTime
}

class Deck {
  - id: String
  - userId: String
  - name: String
  - createdAt: DateTime
  - updatedAt: DateTime
}

class Flashcard {
  - id: String
  - deckId: String
  - front: String
  - back: String
  - tags: String[]
  - due: DateTime
  - stability: Float
  - difficulty: Float
  - elapsedDays: Int
  - scheduledDays: Int
  - reps: Int
  - lapses: Int
  - lastReview: DateTime?
  - nextReviewDate: DateTime
  - cardTypeId: String?
  - fieldValues: Json
  - fieldStyles: Json?
  - cardStyle: Json?
  - createdAt: DateTime
  - updatedAt: DateTime
}

class FlashcardReview {
  - id: String
  - flashcardId: String
  - rating: Int
  - reviewedAt: DateTime
  - scheduledDays: Int
  - elapsedDays: Int
}

class CardType {
  - id: String
  - userId: String?
  - name: String
  - description: String?
  - isBuiltIn: Boolean
  - createdAt: DateTime
  - updatedAt: DateTime
}

class CardTypeField {
  - id: String
  - cardTypeId: String
  - name: String
  - order: Int
  - description: String?
  - fieldType: String
  - createdAt: DateTime
}

class CardTemplate {
  - id: String
  - cardTypeId: String
  - name: String
  - frontFields: String[]
  - backFields: String[]
  - fieldStyles: Json
  - cardStyle: Json
  - createdAt: DateTime
}

class SharedDeck {
  - id: String
  - publisherId: String
  - name: String
  - description: String?
  - tags: String[]
  - lexonPayload: Json
  - importCount: Int
  - createdAt: DateTime
  - updatedAt: DateTime
}

class QuestionNote {
  - id: String
  - userId: String
  - examId: String
  - questionNumber: Int
  - noteText: String
  - createdAt: DateTime
  - updatedAt: DateTime
}

class ShadowingVideo {
  - id: String
  - userId: String?
  - title: String
  - youtubeVideoId: String?
  - audioUrl: String?
  - imageUrl: String?
  - tags: String[]
  - folder: String
  - category: String
  - duration: String
  - sentences: Json
  - status: String
  - createdAt: DateTime
  - updatedAt: DateTime
}

class ShadowingFolder {
  - id: String
  - userId: String
  - name: String
  - order: Int
}

class ShadowingProgress {
  - id: String
  - userId: String
  - lessonId: String
  - completedSentences: Int[]
  - createdAt: DateTime
  - updatedAt: DateTime
}

class DictationVideo {
  - id: String
  - userId: String?
  - title: String
  - youtubeVideoId: String?
  - audioUrl: String?
  - imageUrl: String?
  - tags: String[]
  - folder: String
  - category: String
  - duration: String
  - sentences: Json
  - status: String
  - createdAt: DateTime
  - updatedAt: DateTime
}

class DictationFolder {
  - id: String
  - userId: String
  - name: String
  - order: Int
}

class DictationProgress {
  - id: String
  - userId: String
  - lessonId: String
  - completedSentences: Int[]
  - difficulty: String
  - createdAt: DateTime
  - updatedAt: DateTime
}

class StudentTeacherLink {
  - id: String
  - studentId: String
  - teacherId: String
  - status: String
  - createdAt: DateTime
  - updatedAt: DateTime
}

class Notification {
  - id: String
  - userId: String
  - title: String
  - body: String
  - icon: String?
  - thumbnail: String?
  - link: String?
  - isRead: Boolean
  - createdAt: DateTime
}

class Achievement {
  - id: String
  - key: String
  - name: String
  - description: String
  - icon: String
  - category: String
  - tier: Int
  - xpReward: Int
  - order: Int
  - createdAt: DateTime
}

class UserAchievement {
  - id: String
  - userId: String
  - achievementId: String
  - earnedAt: DateTime
}

class XpLog {
  - id: String
  - userId: String
  - amount: Int
  - reason: String
  - createdAt: DateTime
}

class Post {
  - id: String
  - authorId: String
  - title: String?
  - body: String
  - imageUrls: String[]
  - tags: String[]
  - metadata: Json?
  - likeCount: Int
  - commentCount: Int
  - bookmarkCount: Int
  - isPinned: Boolean
  - isHidden: Boolean
  - createdAt: DateTime
  - updatedAt: DateTime
}

class Comment {
  - id: String
  - postId: String
  - authorId: String
  - parentId: String?
  - body: String
  - isHidden: Boolean
  - createdAt: DateTime
  - updatedAt: DateTime
}

class PostLike {
  - id: String
  - postId: String
  - userId: String
  - createdAt: DateTime
}

class PostBookmark {
  - id: String
  - postId: String
  - userId: String
  - createdAt: DateTime
}

class Subscription {
  - id: String
  - userId: String
  - providerSubId: String?
  - currentPeriodStart: DateTime?
  - currentPeriodEnd: DateTime?
  - canceledAt: DateTime?
  - trialEndsAt: DateTime?
  - trialUsed: Boolean
  - createdAt: DateTime
  - updatedAt: DateTime
}

class Payment {
  - id: String
  - subscriptionId: String
  - amount: Int
  - currency: String
  - providerPayId: String?
  - status: String
  - metadata: Json?
  - createdAt: DateTime
}

class UsageRecord {
  - id: String
  - subscriptionId: String
  - feature: String
  - count: Int
  - periodStart: DateTime
  - periodEnd: DateTime
  - createdAt: DateTime
  - updatedAt: DateTime
}

class PricingPlan {
  - id: String
  - name: String
  - description: String?
  - priceAmount: Int
  - currency: String
  - interval: String
  - intervalCount: Int
  - features: Json
  - isActive: Boolean
  - order: Int
  - createdAt: DateTime
  - updatedAt: DateTime
}

User "1" -- "1" UserRole
User "1" -- "0..*" IeltsIntensiveSession
User "1" -- "0..*" IeltsIntensiveResult
User "1" -- "0..*" LearningProgress
User "1" -- "0..*" FoundationPronunciationAttempt
User "1" -- "0..*" FoundationPronunciationProgress
User "1" -- "0..*" FoundationVocabProgress
User "1" -- "0..*" FoundationGrammarProgress
User "1" -- "0..*" Deck
User "1" -- "0..*" SharedDeck
User "1" -- "0..*" QuestionNote
User "1" -- "0..*" ShadowingVideo
User "1" -- "0..*" ShadowingFolder
User "1" -- "0..*" ShadowingProgress
User "1" -- "0..*" DictationVideo
User "1" -- "0..*" DictationFolder
User "1" -- "0..*" DictationProgress
User "1" -- "0..*" IeltsBasicProgress
User "1" -- "0..*" IeltsBasicWritingAnswer
User "1" -- "0..*" IeltsAdvancedListeningSession
User "1" -- "0..*" IeltsAdvancedReadingSession
User "1" -- "0..*" UserAchievement
User "1" -- "0..*" XpLog
User "1" -- "1" IeltsProfile
User "1" -- "0..*" StudentTeacherLink
User "1" -- "0..*" Notification
User "1" -- "0..*" Post
User "1" -- "0..*" Comment
User "1" -- "0..*" PostLike
User "1" -- "0..*" PostBookmark
User "1" -- "1" Subscription
LearningMaterial "1" -- "1" MaterialType
LearningMaterial "1" -- "1" Difficulty
LearningMaterial "1" -- "0..*" LearningProgress
LearningProgress "1" -- "1" User
LearningProgress "1" -- "1" LearningMaterial
Grammar "1" -- "1" FoundationVocabLesson
Deck "1" -- "1" User
Deck "1" -- "0..*" Flashcard
Flashcard "1" -- "1" CardState
Flashcard "1" -- "1" Deck
Flashcard "1" -- "1" CardType
Flashcard "1" -- "0..*" FlashcardReview
FlashcardReview "1" -- "1" CardState
FlashcardReview "1" -- "1" Flashcard
CardType "1" -- "0..*" CardTypeField
CardType "1" -- "0..*" CardTemplate
CardType "1" -- "0..*" Flashcard
CardTypeField "1" -- "1" CardType
CardTemplate "1" -- "1" CardType
SharedDeck "1" -- "1" User
QuestionNote "1" -- "1" User
ShadowingVideo "1" -- "1" User
ShadowingFolder "1" -- "1" User
ShadowingProgress "1" -- "1" User
DictationVideo "1" -- "1" User
DictationFolder "1" -- "1" User
DictationProgress "1" -- "1" User
StudentTeacherLink "1" -- "1" User
Notification "1" -- "1" User
Notification "1" -- "1" NotificationType
Achievement "1" -- "0..*" UserAchievement
UserAchievement "1" -- "1" User
UserAchievement "1" -- "1" Achievement
XpLog "1" -- "1" User
Post "1" -- "1" PostType
Post "1" -- "1" User
Post "1" -- "0..*" Comment
Post "1" -- "0..*" PostLike
Post "1" -- "0..*" PostBookmark
Comment "1" -- "1" Post
Comment "1" -- "1" User
Comment "1" -- "1" Comment
Comment "1" -- "0..*" Comment
PostLike "1" -- "1" Post
PostLike "1" -- "1" User
PostBookmark "1" -- "1" Post
PostBookmark "1" -- "1" User
Subscription "1" -- "1" SubscriptionTier
Subscription "1" -- "1" SubscriptionStatus
Subscription "1" -- "1" PaymentProvider
Subscription "1" -- "1" User
Subscription "1" -- "0..*" Payment
Subscription "1" -- "0..*" UsageRecord
Payment "1" -- "1" PaymentProvider
Payment "1" -- "1" Subscription
UsageRecord "1" -- "1" Subscription
PricingPlan "1" -- "1" SubscriptionTier

@enduml
